2004-11-15  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/diagramline.py: No longer save properties cap, join
	and line_width, since they are not changed anyway.

2004-11-13  Jeroen Vloothuis  <jeroen@vloothuis.net>

        * gaphor/data/plugins/xmiexport/exportmodel.py: Added support for
        stereotypes.
        * gaphor/data/plugins/xmiexport/exportmodel.py: Added support for
        association names.

2004-11-12  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: Implemented find_relationship().
	* gaphor/diagram/itemactions.py: Implemented CreateLinks action. This
	action is called after a DND action to that canvas and re-creates
	existing relationships.

2004-11-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/klass.py: save width/height when
	subject.ownedAttribute and subject.ownedOperation change.
	* gaphor/ui/mainactions.py: Use new-style file chooser if possible
	(else fall back to the old-and-less-usable version)

2004-11-10  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/plugins/xmiexport/__init__.py: Added action with save dialog.
	* data/plugins/xmiexport/exportmodel.py: Added timestamp, use
	XMLWriter.
	* FAQ: new file.
	* gaphor/ui/diagramview.py: Focus item that is DND'd to the canvas.
	* gaphor/*/*: replaced tabs by spaces.
	* gaphor/diagram/placementactions.py: renamed actions.py to
	placementactions.py to avoid ambiguity with action.py (used for
	state diagrams)
	* gaphor/ui/diagramtab.py: moved DND code from diagramview.py to
	DiagramTab. This will make it easy to run actions when an item is
	DND'd.

2004-11-09  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/attribute.py: added listener for 'association', so
	undo can work properly.
        * data/plugins/alignment: Make only sensitive if items are selected.
	* data/plugins/svgexport: New plugin.
	* gaphor/ui/diagramactions.py: Moved SVG export code to svgexport
	plugin.