@@ -1,7 +1,7 @@
-'''
-AssociationItem -- Graphical representation of an association.
-'''
 # vim:sw=4:et
+
+"""AssociationItem -- Graphical representation of an association.
+"""
 
 # TODO: for Association.postload(): in some cases where the association ends
 # are connected to the same Class, the head_end property is connected to the
@@ -250,7 +250,7 @@ class AssociationItem(RelationshipItem, diacanvas.CanvasGroupable, diacanvas.Can
             elif tail_subject.aggregation == intern('shared'):
                 self.set(has_head=1, head_a=20, head_b=10, head_c=6, head_d=6,
                          head_fill_color=diacanvas.color(255,255,255,255))
-            elif not head_subject.owningAssociation:
+            elif head_subject.class_:
                 # This side is navigable:
                 self.set(has_head=1, head_a=0, head_b=15, head_c=6, head_d=6)
             else:
@@ -262,7 +262,7 @@ class AssociationItem(RelationshipItem, diacanvas.CanvasGroupable, diacanvas.Can
             elif head_subject.aggregation == intern('shared'):
                 self.set(has_tail=1, tail_a=20, tail_b=10, tail_c=6, tail_d=6,
                          tail_fill_color=diacanvas.color(255,255,255,255))
-            elif not tail_subject.owningAssociation:
+            elif tail_subject.class_:
                 # This side is navigable:
                 self.set(has_tail=1, tail_a=0, tail_b=15, tail_c=6, tail_d=6)
             else:
